Fixes #3129 Fixes #3120 Actually, Firefox clipping the faint dotted outlines isn't really fixed per se, but made acceptable because we are now showing the gradient around the visual editing canvas on Firefox. Regarding the faint outlines on DIV and other elements, WebKit shows the outline if it overlaps the edge of the BODY but Mozilla apparently clips it. NOTE: Firefox has extremely aggressive caching, including it seems across sessions, and sometimes seems to ignore clear cache directives.

--- a/maqetta.core.client/WebContent/davinci/davinci.css
+++ b/maqetta.core.client/WebContent/davinci/davinci.css
@@ -2012,6 +2012,10 @@ td.welcome_section_cell {
 	border-top: 1px solid white;
 	border-left: 1px solid white;
 	background:-webkit-linear-gradient(-45deg,#e0e0e0,#fcfcfc);
+	background:-moz-linear-gradient(-45deg,#e0e0e0,#fcfcfc);
+	background:-ms-linear-gradient(-45deg,#e0e0e0,#fcfcfc);
+	background:-o-linear-gradient(-45deg,#e0e0e0,#fcfcfc);
+	background:linear-gradient(-45deg,#e0e0e0,#fcfcfc);
 }
 #visualEditorBorderTopRight {
 	position:absolute;
@@ -2022,16 +2026,24 @@ td.welcome_section_cell {
 	border-top: 1px solid white;
 	border-right: 1px solid white;
 	background:-webkit-linear-gradient(225deg,#e0e0e0,#fcfcfc);
-	}
+	background:-moz-linear-gradient(225deg,#e0e0e0,#fcfcfc);
+	background:-ms-linear-gradient(225deg,#e0e0e0,#fcfcfc);
+	background:-o-linear-gradient(225deg,#e0e0e0,#fcfcfc);
+	background:linear-gradient(225deg,#e0e0e0,#fcfcfc);
+}
 #visualEditorBorderTop {
 	position:absolute;
 	left:8px;
 	right:8px;
 	top:0px;
 	border-top:1px solid white;
-	border-bottom:1px solid white;
+	border-bottom:1px solid transparent;
 	height:6px;
 	background:-webkit-linear-gradient(#e0e0e0,#fcfcfc);
+	background:-moz-linear-gradient(#e0e0e0,#fcfcfc);
+	background:-ms-linear-gradient(#e0e0e0,#fcfcfc);
+	background:-o-linear-gradient(#e0e0e0,#fcfcfc);
+	background:linear-gradient(#e0e0e0,#fcfcfc);
 }
 #visualEditorBorderRight {
 	position:absolute;
@@ -2039,9 +2051,13 @@ td.welcome_section_cell {
 	top:8px;
 	bottom:0px;
 	width:6px;
-	border-left:1px solid white;
+	border-left:1px solid transparent;
 	border-right:1px solid white;
 	background:-webkit-linear-gradient(180deg,#e0e0e0,#fcfcfc);
+	background:-moz-linear-gradient(180deg,#e0e0e0,#fcfcfc);
+	background:-ms-linear-gradient(180deg,#e0e0e0,#fcfcfc);
+	background:-o-linear-gradient(180deg,#e0e0e0,#fcfcfc);
+	background:linear-gradient(180deg,#e0e0e0,#fcfcfc);
 }
 #visualEditorBorderLeft {
 	position:absolute;
@@ -2050,8 +2066,12 @@ td.welcome_section_cell {
 	bottom:0px;
 	width:6px;
 	border-left:1px solid white;
-	border-right:1px solid white;
+	border-right:1px solid transparent;
 	background:-webkit-linear-gradient(0deg,#e0e0e0,#fcfcfc);
+	background:-moz-linear-gradient(0deg,#e0e0e0,#fcfcfc);
+	background:-ms-linear-gradient(0deg,#e0e0e0,#fcfcfc);
+	background:-o-linear-gradient(0deg,#e0e0e0,#fcfcfc);
+	background:linear-gradient(0deg,#e0e0e0,#fcfcfc);
 }
 
 #mainBody > .dijitSplitterV.dijitAlignLeft {
